--- a/test/jstest/js_object.html
+++ b/test/jstest/js_object.html
@@ -14,6 +14,7 @@
 		
 		console.log(intptr);
 		console.log(WebAssembly.GarbageCollection.getType(intptr));
+		console.log(WebAssembly.ObjectManager.getObject(intptr))
 		
       },
       api: { console: true, text: true, array: true }
