--- a/test/jstest/js_object.html
+++ b/test/jstest/js_object.html
@@ -10,7 +10,8 @@
 		
 		var intptr = app.Module1.getObject()		
 		
-		WebAssembly.GarbageCollection.addObject(intptr, 13);
+		WebAssembly.GarbageCollection.addObject(intptr, 350);
+		WebAssembly.GarbageCollection.addObject(1077, 13);
 		
 		console.log(intptr);
 		console.log(WebAssembly.GarbageCollection.getType(intptr));
