--- a/test/jstest/js_object.html
+++ b/test/jstest/js_object.html
@@ -13,9 +13,11 @@
 		// WebAssembly.GarbageCollection.addObject(intptr, 350);
 		// WebAssembly.GarbageCollection.addObject(1077, 13);
 		var array = app.numberArray.createVector();
+		var strings = app.numberArray.namesVector();
 		
       console.log(array);
 console.log(WebAssembly.ObjectManager.readArray(array));
+	  console.log(WebAssembly.ObjectManager.getObject(strings));
 	  
 		console.log(intptr);
 		console.log(WebAssembly.GarbageCollection.getType(intptr));
