try to fix the read missing assembly info problem when compile wasm module from a single source file

--- a/test/jstest/array_debug.html
+++ b/test/jstest/array_debug.html
@@ -5,7 +5,7 @@
 
 <script>
 // WebAssembly Demo
-    vanilla.Wasm.showDebugMessage(false);
+    vanilla.Wasm.showDebugMessage(true);
     vanilla.Wasm.RunAssembly("@webassembly", {
       run: app => {
 
