--- a/test/jstest/array_debug.html
+++ b/test/jstest/array_debug.html
@@ -14,6 +14,11 @@
 		  console.log(app);	
 		  console.log("array addressof := &" + objectArray);
 		  console.log(WebAssembly.ObjectManager.getObject(objectArray));
+
+			console.error("print a arrayof class in webassembly memory:")
+
+			app.objectArrayTest.printArray();
+
       },
       api: { console: true, text: true, array: true }
     });
